# fast-langdetect

./: .nerve.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  NOTICE.MD  README.md  pyproject.toml
.github/workflows/: publish.yml  python_test.yml
examples/: memory_usage_check.py
feature_test/: __init__.py  lingua_t.py  spacy.py
src/fast_langdetect/: __init__.py  infer.py  settings.py
src/fast_langdetect/ft_detect/: __init__.py  infer.py
src/fast_langdetect/ft_detect/resources/: NOTICE.MD
src/fast_langdetect/split/: __init__.py  cut.py
tests/: conftest.py  test_chinese_path.py  test_detect.py  test_model_cache.py  test_real_detection.py
