[project]
name = "fast-langdetect"
version = "0.2.1"
description = "Quickly detect text language and segment language"
authors = [
    { name = "sudoskys", email = "coldlando@hotmail.com" },
]
dependencies = [
    "fasttext-wheel>=0.9.2",
    "robust-downloader>=0.0.2",
    "numpy>=1.26.4,<2.0.0",
    "requests>=2.32.3",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
]
