[project]
name = "fast-langdetect"
version = "0.2.3"
description = "Quickly detect text language and segment language"
authors = [
    { name = "sudoskys", email = "coldlando@hotmail.com" },
]
dependencies = [
    "robust-downloader>=0.0.2",
    "requests>=2.32.3",
    "fasttext-predict>=0.9.2.4",
]
requires-python = ">=3.9,<3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.4",
]
